[package]
name = "vertreap"
version = "0.1.0-pre.0"
edition = "2018"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "MIT"
description = "A purely functional treap"
documentation = "https://docs.rs/vertreap"
repository = "https://github.com/peterhj/vertreap"
readme = "README.md"

[dependencies]
rand = "^0.6"
